Add prod target to conf
For deployment

--- a/sqitch.conf
+++ b/sqitch.conf
@@ -5,10 +5,12 @@
 	# top_dir = .
 [engine "pg"]
 	target = sqitch_test
-	registry = sqitch
+	registry = sqitch_afyatek
 	client = psql
 [target "sqitch_test"]
 	uri = db:postgres://sqitch:secret@localhost:5432/sqitch_test
+[target "afyatek_prod"]
+	uri = db:postgres://dtreedev@afyatek-dev-psql-1-instance-1.crzd0mizk2nc.us-west-2.rds.amazonaws.com:5432/afyatekdb_production
 [deploy]
 	verify = true
 [rebase]
