--- a/sqitch.conf
+++ b/sqitch.conf
@@ -16,10 +16,10 @@
 [rebase]
 	verify = true
 [core "variables"]
-	db_user = sqitch
+	db_user = dtreedev
 [deploy "variables"]
-	db_user = sqitch
+	db_user = dtreedev
 [verify "variables"]
-	db_user = sqitch
+	db_user = dtreedev
 [revert "variables"]
-	db_user = sqitch
+	db_user = dtreedev
